--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Kalpesh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.26.0"
   }
 }
